--- a/readme
+++ b/readme
@@ -1,12 +1,16 @@
     To work, you must run two scripts!
-Start frontend:
+Start frontend
+{
      Relative path - crud-ean/backend,
-     first start install npm i --save-dev,
+     first start, install - install npm i --save-dev,
      start - npm run frontend,
-     port:4200
+     port:4200 
+     }
 
-Start backend:
+Start backend
+{
      Relative path - crud-ean/frontend,
-     first start install npm i --save-dev,
+     first start, install - install npm i --save-dev,
      start - npm run backend,
-     port:4000
+     port:4000 
+     }
